<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ah980627.hising_aron_teknik.Main2Activity">

    <Button
        android:text="@string/design_and_product_development"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/button4"
        android:layout_marginBottom="19dp"
        android:layout_above="@+id/button5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickDesign" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/button"
        android:text="@string/engineering_sciences"
        android:layout_marginBottom="24dp"
        android:layout_above="@+id/button4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickVet" />

    <Button
        android:text="@string/community_building_and_environment"
        android:layout_width="match_parent"
        android:id="@+id/button6"
        android:layout_height="60dp"
        android:layout_marginBottom="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickSam" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/button5"
        android:text="@string/information_and_media_technology"
        android:layout_marginBottom="28dp"
        android:layout_above="@+id/button6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickIt" />
</RelativeLayout>
